# vegeta

./: .prettierrc  README.md  bun.lockb  package.json  tailwind.config.ts  tsconfig.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  profile.rs  todo.rs
src/_sample/: gateway.js
src/app/: globals.css  layout.tsx  page.tsx
src/app/(apps)/: layout.tsx  not-found.tsx  page.tsx  template.tsx
src/app/(apps)/components/: LeftBar.tsx
src/app/(apps)/todo/: page.tsx
src/app/(apps)/todo/_components/: ScanArea.tsx  ScanAreaObserver.ts  TodoLeftPanel.tsx  useDragging.ts
src/app/(apps)/todo/_components/todo_content/: TodoContent.tsx  TodoItem.tsx
src/app/(apps)/todo/_store/: todoStore.ts
src/app/(apps)/todo/main_area/: ProcessingTodoCard.tsx  ProcessingTodoList.tsx  TodoMainArea.tsx  TodoSetting.tsx  functional_children.tsx
src/app/(login)/: layout.tsx
src/app/(login)/login/: page.tsx
src/app/(login)/signup/: page.tsx
src/app/components/: LeftBar.tsx  NextUIProvider.tsx
src/app/shared/: NextUIProvider.tsx  QueryClientProvider.tsx  globals.css  localStorageKey.ts
src/app/todolist/: layout.tsx  page.tsx  useResize.ts
src/app/todolist/components/: Menu.tsx  TodoLeftPanel.tsx
src/app/todolist/task/: layout.tsx  page.tsx
src/firebase/: FirebaseProvider.tsx  Profile.ts  Todo.ts  UserProvider.tsx  firebase.ts  signin.ts  signout.ts  signup.ts  updateProfile.ts  useGoogleLogin.ts  useUploadImage.ts
src/gateway/: profile_gateway.ts  todo_gateway.ts
src/utils/: date.ts  rerender.ts
(+8 files in other folders)
